# gpt-commit-message

./: Cargo.toml  README.md
pgvector/: docker-compose.yml
pgvector/postgres/: 0-vector_extension.sql
pgvector/postgres-pgvector/: .env
src/: cli.rs  gpt.rs  main.rs
system_prompts/: beatles.json  daskleinea.json  limerick.json  marvin.json  yoda.json
