[package]
name = "gpt-commit-message"
version = "0.1.4"
edition = "2021"
description = "Create conventional commit message based on the provided input"  
license = "Apache-2.0"
repository = "https://github.com/deicon/gpt-commit-message"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.128"
serde = { version = "1.0.206", features = ["derive"] }
